# poetry-version-bumping

./: Makefile  playbook.sh  pyproject.toml
poetry_version_bumping/: __init__.py
tests/: test_poetry_version_bumping.py
