[tool.poetry]
name = "poetry-version-bumping"
version = "0.1.0"
description = ""
authors = ["Nicolas Stalder <ns@admetrics.io>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.21.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
